--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "vendor/plugins/Twig-for-WordPress"]
-	path = vendor/plugins/Twig-for-WordPress
-	url = https://github.com/acleon/Twig-for-WordPress.git
 [submodule "vendor/wordpress"]
 	path = vendor/wordpress
 	url = ../WordPress.git
+[submodule "vendor/twitter_bootstrap"]
+	path = vendor/twitter_bootstrap
+	url = git://github.com/twitter/bootstrap.git
