--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "vendor/wordpress"]
 	path = vendor/wordpress
-	url = git://github.com/markjaquith/WordPress.git
+	url = git@git.bestbytes.net:WordPress.git
